--- a/index.html
+++ b/index.html
@@ -28,30 +28,30 @@
       </header>
       <main>
         <section class="services">
-          <div class="container"></div>
+          <div class="container">
           <h2 class="services-title">Services</h2>
           <ul class="list services-list">
             <li class="services-item">
               <h3 class="services-item-title">E-Commerce</h3>
               <p class="services-item-text">
-                Proin iaculis purus consequat sem cure digni ssim. Donec
-                porttitora entum suscipit aenean rhoncus posuere odio in
+                Proin iaculis purus consequat sem cure <br> digni ssim. Donec
+                porttitora entum suscipit <br> aenean rhoncus posuere odio in
                 tincidunt.
               </p>
             </li>
             <li class="services-item">
               <h3 class="services-item-title">Responsive Web</h3>
               <p class="services-item-text">
-                Proin iaculis purus consequat sem cure digni ssim. Donec
-                porttitora entum suscipit aenean rhoncus posuere odio in
+                Proin iaculis purus consequat sem cure <br> digni ssim. Donec
+                porttitora entum suscipit <br>aenean rhoncus posuere odio in
                 tincidunt.
               </p>
             </li>
             <li class="services-item">
               <h3 class="services-item-title">Web Security</h3>
               <p class="services-item-text">
-                Proin iaculis purus consequat sem cure digni ssim. Donec
-                porttitora entum suscipit aenean rhoncus posuere odio in
+                Proin iaculis purus consequat sem cure <br> digni ssim. Donec
+                porttitora entum suscipit <br>aenean rhoncus posuere odio in
                 tincidunt.
               </p>
             </li>
@@ -59,26 +59,24 @@
         </div>
         </section>
         <section class="contact-us">
-          <div class="container"></div>
+          <div class="container">
           <h2 class="contact-us-title">Contact Us</h2>
-          <form class="contact-us-form">
-            <input
+           <form class="contact-us-form">
+            <div class="contact-us-form-box"><input
               type="text"
               name="name"
               autofocus
               placeholder="Your name *"
-              class="contact-us-input"
-            /><br />
-            <input type="email" name="email" placeholder="Your e-mail *" class="contact-us-input" /><br />
-            <input type="text" name="subject" placeholder="Subject" class="contact-us-input" /><br />
+              class="contact-us-input"/>
+            <input type="email" name="email" placeholder="Your e-mail *" class="contact-us-input" />
+            <input type="text" name="subject" placeholder="Subject" class="contact-us-input" /></div>
             <textarea
               name="comment"
               cols="30"
               rows="10"
               placeholder="Your message *"
               class="contact-us-textarea"
-            ></textarea
-            ><br />
+            ></textarea >
             <button type="submit" class="contact-us-btn">Send message</button>
           </form>
         </div>
