--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bilbo+Swash+Caps&family=Montserrat:wght@400;700&family=Roboto+Slab&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="./css/styles.css">
+
+<link rel="stylesheet" href="./css/main.min.css">
 </head>
   <body>
     <body>
@@ -17,7 +18,7 @@
         <p class="logo">Golden</p>
         <nav class="nav">
           <ul class="list nav-list">
-            <li class="nav-item"><a href="" class="nav-link">Home</a></li>
+            <li class="nav-item"><a href="" class="nav-link current">Home</a></li>
             <li class="nav-item"><a href="" class="nav-link">Services</a></li>
             <li class="nav-item"><a href="" class="nav-link">Portfolio</a></li>
             <li class="nav-item"><a href="" class="nav-link">About</a></li>
